eks/alb/ingress-nginx/alb-ingress-ssl-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-ssl-redirect"
  annotations:
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets:
    alb.ingress.kubernetes.io/security-groups:
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: artifactory-ssl-redirect
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/tags: 'alb.group=artifactory-ssl-redirect'
    alb.ingress.kubernetes.io/certificate-arn: XXX
spec:
  ingressClassName: alb
  rules:
  - host: "HOSTNAME"
    http:
      paths:
      - backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
        path: /
        pathType: Prefix
